fix: path as input

--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -9,6 +9,6 @@
     </div>
   </div>
   <div class="pictureContainer">
-    <img src="../../assets/horse_after.png" alt="After" class="picture" id="afterImg">
+    <img [src]="picturePath" alt="After" class="picture" id="afterImg">
   </div>
 </div>
