fix: sectionInfoDTO and left right

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,5 +10,5 @@
 </div>
 
 <div #sections>
-  <app-section *ngFor="let picture of picturePaths" [picturePath]="picture"></app-section>
+  <app-section *ngFor="let sectionInfo of sectionArray" [sectionInfo]="sectionInfo"></app-section>
 </div>
