--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,7 @@
 <div class="header">
-  <div class="logo">logo</div>
+  <div class="logo">
+    <img src="assets/Logo.svg" alt="Logo">
+  </div>
   <div class="navigation">
     <div><a href="#section1">Lissabon</a></div>
     <div>Picture 1</div>
@@ -7,8 +9,4 @@
     <div>Picture 3</div>
     <div>Video</div>
   </div>
-</div>
-
-<div #sections>
-  <app-section *ngFor="let sectionInfo of sectionArray" [sectionInfo]="sectionInfo"></app-section>
 </div>
