--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-<app-header></app-header>
+<app-header (elementClicked)="scrollToSection($event)"></app-header>
+
+<div id="section0">
+  <div class="title">
+
+  </div>
+  <div class="description">
+
+  </div>
+</div>
 <div #sections>
-  <app-section *ngFor="let sectionInfo of sectionArray" [sectionInfo]="sectionInfo"></app-section>
+  <app-section id="{{'section' + sectionInfo.sectionId}}" *ngFor="let sectionInfo of sectionArray" [sectionInfo]="sectionInfo"></app-section>
 </div>
