--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,9 @@
   </div>
   <div class="navigation">
     <div><a href="#section1">Lissabon</a></div>
-    <div>Picture 1</div>
-    <div>Picture 2</div>
-    <div>Picture 3</div>
-    <div>Video</div>
+    <div><a href="#section2">Lissabon</a></div>
+    <div><a href="#section3">Lissabon</a></div>
+    <div><a href="#section4">Lissabon</a></div>
+    <div><a href="#section5">Lissabon</a></div>
   </div>
 </div>
