--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,10 +1,13 @@
 .header {
   display: flex;
   width: 100%;
-  background-color: aliceblue;
+  height: 150px;
   justify-content: space-between;
   height: 40px;
   line-height: 2.5em;
+  box-shadow: 0px 15px 10px -15px #111;
+  margin-bottom: 5px;
+  border-radius: 25px;
 
   .logo {
     display: flex;
@@ -15,5 +18,8 @@
     display: flex;
     justify-content: space-between;
     margin-right: 20px;
+
+    div a {
+    }
   }
 }
