--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -1,11 +1,10 @@
 <div *ngIf="!sectionInfo?.isPictureLeft" class="section">
   <div class="text">
     <div class="picture-title">
-      <h2>Picture title</h2>
+      <h2>{{sectionInfo?.title}}</h2>
     </div>
     <div class="picture-text">
-      lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-      lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+      {{sectionInfo?.text}}
     </div>
   </div>
   <div class="pictureContainer">
@@ -18,11 +17,10 @@
   </div>
   <div class="text">
     <div class="picture-title">
-      <h2>Picture title</h2>
+      <h2>{{sectionInfo?.title}}</h2>
     </div>
     <div class="picture-text">
-      lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-      lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
+      {{sectionInfo?.text}}
     </div>
   </div>
 </div>
