--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -1,11 +1,12 @@
 .section {
   display: flex;
   justify-content: space-between;
-  background-color: #fafafa;
   height: 400px;
   align-items: center;
   width: 80%;
-  margin-left: 10%;
+  margin: 10px 0 0 10%;
+  //box-shadow: 0px 15px 10px -15px #111;
+
 
   .text {
     width: 50%;
