--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,6 @@
 .header {
+  position: fixed;
+  background-color: white;
   display: flex;
   width: 100%;
   height: 150px;
@@ -8,18 +10,22 @@
   box-shadow: 0px 15px 10px -15px #111;
   margin-bottom: 5px;
   border-radius: 25px;
+  top: 0;
 
   .logo {
     display: flex;
+    margin-left: 1%;
   }
 
   .navigation {
     width: 60%;
     display: flex;
     justify-content: space-between;
-    margin-right: 20px;
+    margin-right: 1%;
+    padding-right: 1%;
 
     div a {
+      text-decoration: none;
     }
   }
 }
