--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,5 @@
 .header {
+  font-family: Arial;
   position: fixed;
   background-color: white;
   display: flex;
@@ -11,6 +12,7 @@
   margin-bottom: 5px;
   border-radius: 25px;
   top: 0;
+  z-index: 1;
 
   .logo {
     display: flex;
