--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -1,3 +1,7 @@
+* {
+  font-family: Arial;
+}
+
 .section {
   display: flex;
   justify-content: space-between;
@@ -25,10 +29,24 @@
   .pictureContainer {
     width: 50%;
     text-align: center;
+    justify-items: center;
+    position: relative;
+    overflow: hidden;
 
     .picture {
-      height: 300px;
-      width: 300px;
+      max-height: 300px;
+      max-width: 300px;
     }
+
+    .video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+    }
+
   }
 }
