--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,9 +3,15 @@
     <img src="assets/Logo.svg" alt="Logo">
   </div>
   <div class="navigation">
-    <div><a href="#section1">Lissabon</a></div>
-    <div><a href="#section2">Lissabon</a></div>
-    <div><a href="#section3">Lissabon</a></div>
-    <div><a href="#section4">Lissabon</a></div>
+    <div><a href="#section1">Praça da Figueira</a></div>
+    <div><a href="#section2">Tram</a></div>
+    <div><a href="#section3">Marktplatz</a></div>
+    <div><a href="#section4">Reise nach Lissabon</a></div>
+  </div>
+  <div class="small-nav">
+    <div><a href="#section1"><img src="assets/horse-chess-svgrepo-com.svg" alt="Logo"></a></div>
+    <div><a href="#section2"><img src="assets/tramway-svgrepo-com.svg" alt="Logo"></a></div>
+    <div><a href="#section3"><img src="assets/building-svgrepo-com.svg" alt="Logo"></a></div>
+    <div><a href="#section4"><img src="assets/airplane-shape-svgrepo-com.svg" alt="Logo"></a></div>
   </div>
 </div>
