--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -9,7 +9,6 @@
   align-items: center;
   width: 80%;
   margin: 10px 0 0 10%;
-  //box-shadow: 0px 15px 10px -15px #111;
 
 
   .text {
@@ -39,14 +38,52 @@
     }
 
     .video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
+      max-height: 300px;
+      max-width: 300px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+  }
+
+  .text {
+    width: 100% !important;
+    text-align: center;
+
+    .picture-text {
       width: 100%;
-      height: 100%;
+    }
+  }
+
+  .pictureContainer {
+    width: 100% !important;
+    text-align: center;
+    justify-items: center;
+    position: relative;
+    overflow: hidden;
+
+    .picture {
+      max-height: 300px;
+      max-width: 300px;
     }
 
+    .video {
+      max-height: 300px;
+      max-width: 300px;
+    }
+  }
+
+  .sectionLeft {
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
