--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,7 @@
   <app-lissabon-section id="section0"></app-lissabon-section>
   <app-section id="{{'section' + sectionInfo.sectionId}}" *ngFor="let sectionInfo of sectionArray" [sectionInfo]="sectionInfo"></app-section>
 </div>
+
+<div>
+  <i>Copyright © Leandro Davatz 2023</i>
+</div>
